[project]
name = "aiagent"
version = "0.1.0"
description = "A Python-based AI coding agent that uses the Gemini API to read, modify, and execute code in a loop through tool-calling."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai==1.12.1",
    "python-dotenv==1.1.0",
]
